--- a/HTML e CSS/responsiveSidebar/index.html
+++ b/HTML e CSS/responsiveSidebar/index.html
@@ -101,6 +101,12 @@
         </div>
     </nav>
 
+    <section class="home">
+        <div class="text">
+            hello world
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
